Bug 1590676 - Fix build if arm doesn't support NEON r=kjacobs

At the moment NSS assumes that ARM supports NEON extension but this is
not true and leads to build failure on ARM without NEON extension.
Add check to assure USE_HW_AES is not defined if ARM without NEON
extension is used.

--HG--
extra : rebase_source : fc4d7e580043c69b1d362d0ee047185dbe1539d8